# py_aibi

./: README.rst  aibi_notebook.ipynb  app.py  pyproject.toml
.ipynb_checkpoints/: aibi_tests-checkpoint.ipynb
assets/pl_01/: PL_01.m  mamografia.tif  mona.tif
assets/pl_02/: PL_02.m  blister.tif  blobs2_bin.tif  celulas_1.tif  hand.tif  hand_noise.tif  smarties.TIF
assets/pl_03/: 2020-03-25-AIBI-PL_Leandro_Gabriel.xlsx  EDorsal(MRI).tif  PL_03.m  angio.tif  histo_1.tif
assets/pl_04/: 2020-04-15-AIBI-PL_Leandro_Gabriel.xlsx  BWCircles.tif  Hubble.tif  PL_04.m
assets/pl_04/2020-04-15-AIBI-PL_Leandro_Gabriel/: 2020-04-15-AIBI-PL_Leandro_Gabriel.mat
assets/pl_05/: 2020-04-29-AIBI-PL_Leandro_Gabriel.xlsx  PL_05.m  celulas_2.tif  root.tif  root_thin.tif
py_aibi/: __init__.py  pl_01.py  pl_02.py  pl_03.py  pl_04.py  pl_05.py
tests/: test_py_aibi.py
