[tool.poetry]
name = "py_aibi"
version = "0.1.0"
description = "Exercícios da disciplina AIBI (Análise de Imagem Biomédica) do curso de Mestrado em Engenharia Biomédica da FEUP (Faculdade de Engenharia da Universidade do Porto)."
authors = ["Leandro Gabriel <lassisg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.16.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
